Fix 'Navbar link icon spacing wrong' - #235.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -1467,10 +1467,6 @@ div.questionbankwindow.block {
     padding-right: 4px !important;
 }
 
-.showhideblocksdesc {
-    padding-left: 1px;
-}
-
 #showsidebaricon {
     display: none;
 }
